# RYL

./: .env  .flake8  .gitignore  Dockerfile  main.py  migrate.sh  pyproject.toml  readme.md  requirements.txt
app/: __init__.py  crap.py  openapi3.yml
app/config/: dev.py
app/db/: database.py  models.py
app/db/models/: __init__.py  author.py  creator.py  credit.py  gd_account.py  gd_server.py  genre.py  level.py  song.py  (+7 more)
app/logic/: import_data.py  retreive_data.py
app/routes/: __init__.py  auth.py  author.py  creator.py  credit.py  gd_account.py  gd_server.py  genre.py  level.py  level_authorship.py  level_genre.py  level_upload.py  team.py  team_member.py  test.py  utility.py
app/schemas/: __init__.py  author.py  creator.py  credit.py  gd_account.py  gd_server.py  genre.py  level.py  level_authorship.py  level_genre.py  level_upload.py  song.py  team.py  team_member.py  user.py
app/templates/: add_level.html  base.html  creator.html  creators.html  layouts.html  level.html  levels.html  login.html  ryl_base.html
app/utility/: auth.py  context.py  crud_auth.py  database.py  debug.py  error.py  exceptions.py  ryl_apibluprint.py  util.py  validators.py
sample_data/: aredl_combined.json  demonlist_combined.json  demonlist_listed_all.json  demonlist_p1.json
sample_data/gdh/: gdh50_enhanced.json  gdhistory100.json  gdhistory1000.json  gdhistory500.json  ispy.json  ispy_brief.json  processed_gdh500.json  processed_gdh50_enhanced.json
scripts/: create_test_db.sh  reset_pg_db.sh  reset_test_db.sh  run_debug.sh  yt.py
tests/: conftest.py  test_db_user.py
(+20 files in other folders)
