[project]
name = "RYL_backend"
version = "2020.0.0"
requires-python = ">= 3.8"

dependencies = [
  "flask",
  "flake8",
  "black",
]

[project.optional-dependencies]
    cli = []

[tool.isort]
profile = "black"

[tool.black]
line-length = 80
#'extend-exclude' excludes files or directories in addition to the defaults
#target-version = ['py37']
#include = '\.pyi?$'
